update: 完善Kubernetes配置文档，添加Redis持久化和HPA配置示例

--- a/Kubernetes课件/12.故障恢复项目实战.md
+++ b/Kubernetes课件/12.故障恢复项目实战.md
@@ -113,7 +113,7 @@ kubeadm join 10.3.203.100:6443 --token <token> --discovery-token-ca-cert-hash <c
 - 为`nginx.yaml,phpfpm.yaml`等文件添加健康检查机制
 - 检查`nginx php-fpm mysql`服务
 - 通过`curl -v http://bbs.iproute.cn`访问正常
-- ~~修改`service/ingress-nginx-controller`为`NodePort`方式并通过`helm`更新~~
+- 修改`service/ingress-nginx-controller`为`NodePort`方式并通过`helm`更新
 
 ## 3.MySQL密码修改
 - 新密码为:`123456`
@@ -133,6 +133,29 @@ FLUSH PRIVILEGES;
 /root/data/nfs/html/uc_server/data/config.inc.php:4:define('UC_DBPW', '123456');
 ```
 ## 4.Redis持久化
+- 配置文件通过configmap挂载至`/usr/local/etc/redis/redis.conf`
+- 数据目录通过nfs挂载至`/data`
+- 测试验证
+```shell
+# 进入容器写入测试数据
+kubectl exec -it $(kubectl get pods -l app=redis -o jsonpath='{.items[0].metadata.name}') -- redis-cli
+> SET testkey "persistence_verified"
+> SAVE
+# 文件持久化
+[root@master01 ~]# tree data/nfs/redis/
+data/nfs/redis/
+└── data
+    ├── appendonlydir
+    │   ├── appendonly.aof.1.base.rdb
+    │   ├── appendonly.aof.1.incr.aof
+    │   └── appendonly.aof.manifest
+    └── dump.rdb
+
+# 删除 Pod 触发重建后验证数据
+kubectl delete pod $(kubectl get pods -l app=redis -o jsonpath='{.items[0].metadata.name}')
+[root@master01 resources]# kubectl exec $(kubectl get pods -l app=redis -o jsonpath='{.items[0].metadata.name}') -- redis-cli GET testkey
+persistence_verified
+```
 
 ## 5.新增工作节点
 - 前置条件: 参考`03.安装手册`
@@ -140,7 +163,25 @@ FLUSH PRIVILEGES;
 ```shell
 kubeadm join 10.3.203.100:6443 --token <token> --discovery-token-ca-cert-hash <ca> --cri-socket unix:///var/run/cri-dockerd.sock
 ```
-## 6.配置PHA
+
+## 6.配置HPA
+- 给`nginx php`配置HPA
+- 压测并测试验证
+```shell
+# 提供YAML文件
+
+# 压测
+yum install httpd-tools -y
+ab -n 10000 -c 10 http://bbs.iproute.cn/
+
+## 观察
+watch kubectl top -l app=php
+Every 2.0s: kubectl get hpa                                                  master01: Fri Apr 11 11:11:48 2025
+NAME	  REFERENCE        TARGETS            MINPODS   MAXPODS   REPLICAS   AGE
+php-hpa   Deployment/php   211%/80%, 9%/80%   3         10 	  5          3m37s
+# 查看
+kubectl top
+```
 
 ## 7.MySQL高可用-主从
 - 测试验证主从服务可用
@@ -182,5 +223,8 @@ change master to master_host='mysql-master',master_user='replicator',master_pass
 start slave;
 
 # 清除所有复制配置（包括master.info文件）
-reset slave all;  
+reset slave all; 
+
+# 访问业务
+[root@master01 resources]# curl -H "host: bbs.iproute.cn" 10.3.202.101:`kubectl get svc/ingress-nginx-controller -n ingress-nginx -o jsonpath="{.spec.ports[?(@.port==80)].nodePort}" -n ingress`
 ```
