fix: 注释掉DOS命令示例中的图片链接失效问题

--- a/Java基础/课件/基础/java概述/01_概述.md
+++ b/Java基础/课件/基础/java概述/01_概述.md
@@ -15,7 +15,7 @@
 # DOS命令
 DOS（Disk Operating System，磁盘操作系统）是Microsoft公司在Windows之前推出的一个操作系统，是单用户、单任务（即只能执行一个任务）的操作系统。现在被Windows系统取代。
 对于Java初学者，学习一些DOS命令，会非常有帮助。
-![](../../images/2023/1687931286297-240f7218-423b-4eee-bb39-8a02bec69df5.png)
+<!-- ![](../../images/2023/1687931286297-240f7218-423b-4eee-bb39-8a02bec69df5.png) -->
 **常用指令：**
 
 - 操作1：进入和回退
