Add remote management diagram for Linux system installation

--- a/SRE/Kubernetes/12.故障恢复项目实战.md
+++ b/SRE/Kubernetes/12.故障恢复项目实战.md
@@ -227,4 +227,29 @@ reset slave all;
 
 # 访问业务
 [root@master01 resources]# curl -H "host: bbs.iproute.cn" 10.3.202.101:`kubectl get svc/ingress-nginx-controller -n ingress-nginx -o jsonpath="{.spec.ports[?(@.port==80)].nodePort}" -n ingress`
+
+# calicoctl相关命令
+[root@master01 ~]# ./calicoctl-linux-amd64 node status
+Calico process is running.
+
+IPv4 BGP status
++--------------+-------------------+-------+----------+-------------+
+| PEER ADDRESS |     PEER TYPE     | STATE |  SINCE   |    INFO     |
++--------------+-------------------+-------+----------+-------------+
+| 10.3.204.101 | node-to-node mesh | up    | 05:11:14 | Established |
+| 10.3.204.102 | node-to-node mesh | up    | 05:12:46 | Established |
++--------------+-------------------+-------+----------+-------------+
+
+[root@master01 ~]# ./calicoctl-linux-amd64 get ipPool --allow-version-mismatch -o wide
+NAME                  CIDR            NAT    IPIPMODE   VXLANMODE   DISABLED   SELECTOR
+default-ipv4-ippool   10.244.0.0/16   true   Never      Never       false      all()
+
+[root@master01 ~]# calicoctl ipam show --show-blocks --allow-version-mismatch
+
+[root@master01 ~]# calicoctl ipam show --allow-version-mismatch
++----------+---------------+-----------+------------+-------------+
+| GROUPING |     CIDR      | IPS TOTAL | IPS IN USE |  IPS FREE   |
++----------+---------------+-----------+------------+-------------+
+| IP Pool  | 10.244.0.0/16 |     65536 | 2294 (4%)  | 63242 (96%) |
++----------+---------------+-----------+------------+-------------+
 ```
