--- a/SRE/Docker/08.docker网络管理.md
+++ b/SRE/Docker/08.docker网络管理.md
@@ -92,8 +92,8 @@ fe00::0	ip6-localnet
 ff00::0	ip6-mcastprefix
 ff02::1	ip6-allnodes
 ff02::2	ip6-allrouters
-172.17.0.2	nginx-web1 622eff54876f web1
-172.17.0.4	c85c73ebf00b
+172.17.0.2  nginx-web1 622eff54876f web1
+172.17.0.4  c85c73ebf00b
 ```
 
 - 连通性测试
@@ -111,16 +111,12 @@ rtt min/avg/max/mdev = 0.055/0.083/0.112/0.029 ms
 ```
 
 # Docker网络
-
-## 四类网络模式
-
-| Docker网络模式 | 配置                      | 说明                                                         |
-| -------------- | ------------------------- | ------------------------------------------------------------ |
-| host模式       | –net=host                 | 容器和宿主机共享Network namespace。                          |
-| container模式  | –net=container:NAME_or_ID | 容器和另外一个容器共享Network namespace。 kubernetes中的pod就是多个容器共享一个Network namespace。 |
-| none模式       | –net=none                 | 容器有独立的Network namespace，但并没有对其进行任何网络设置，如分配veth pair 和网桥连接，配置IP等。 |
-| bridge模式     | –net=bridge               | （默认为该模式）                                             |
-
+| Docker网络模式 | 配置                      | 说明                                                         | 使用场景                                                     |
+| -------------- | ------------------------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| host模式       | --net=host                | 容器和宿主机共享Network namespace，直接使用宿主机网络栈。容器不会获得独立的Network namespace，也不会配置独立的IP和端口。 | 适用于对网络性能要求极高的场景，如高性能计算、流媒体服务等。但需注意端口冲突问题，不建议在生产环境大规模使用。 |
+| container模式  | --net=container:NAME_or_ID | 容器和指定的容器共享Network namespace。新容器使用已存在容器的网络栈，共享IP地址和端口范围，但文件系统、进程等其他资源仍然隔离。 | 最典型应用是Kubernetes的Pod实现，同Pod内的容器共享网络，方便容器间通信。也适用于需要网络共享的微服务。 |
+| none模式       | --net=none                | 容器拥有独立的Network namespace，但不做任何网络配置。容器没有网卡、IP、路由等网络配置。 | 适用于对安全性要求极高的场景，或者需要完全自定义网络配置的特殊场景。在生产环境中较少使用。 |
+| bridge模式     | --net=bridge              | 默认网络模式。Docker daemon创建docker0虚拟网桥，通过veth pair连接容器，实现容器间的通信。支持端口映射和地址转换。 | 最常用的网络模式，适用于大多数单机容器场景。通过NAT和端口映射，可以实现容器与外部网络的通信。 |
 Docker服务安装完成之后，默认在每个宿主机会生成一个名称为docker0的网卡，其ip地址都是172.17.0.1/16，并且会生成三种不同类型的网络
 
 ```bash
@@ -163,7 +159,8 @@ beace8354cca   none      null      local
 ## none网络类型
 
 在使用none模式后，docker容器**不会进行任何网络配置**，其没有网卡、没有ip也没有路由，因此默认无法与外界进行通信，需要手动添加网卡配置ip等，所以**极少使用**
-                                  ![img](06.docker网络管理/13618762-3fd41778faebcef5.png)
+
+![img](06.docker网络管理/None网络类型.png)
 
 ```bash
 [root@docker-server1 ~]# docker run -d -it --name web4 --network none nginx:1.8
@@ -173,14 +170,12 @@ beace8354cca   none      null      local
 
 这个模式指定新创建的容器和**已经存在的一个容器共享**一个 Network Namespace，而不是和宿主机共享。新创建的容器不会创建自己的网卡，配置自己的 IP，而是和一个指定的容器共享 IP、端口范围等。同样，两个容器除了网络方面，其他的如文件系统、进程列表等还是隔离的。两个容器的进程可以通过 lo 网卡（环回接口）设备通信。
 
-![img](06.docker网络管理/13618762-790a69a562a5b358.png)
+![img](06.docker网络管理/Container网络类型.png)
 
 ```bash
 [root@docker-server1 ~]# docker run -d -it --name web5 --network container:web1 nginx
 83db4f9af6f3d9d42bbd57691fcf82ef06cbf1a5874750effa314a4ec242aaaa
 ```
-
-
 
 ## host网络类型
 
@@ -188,7 +183,7 @@ beace8354cca   none      null      local
 
 使用host模式的容器可以直接使用宿主机的IP地址与外界通信**，容器内部的服务端口也可以使用宿主机的端口**，不需要进行NAT，host最大的优势就是**网络性能比较好**，但是docker host上已经使用的端口就不能再用了，**网络的隔离性不好。**
 
-![img](06.docker网络管理/13618762-a892da42b8ff9342.png)
+![img](06.docker网络管理/Host网络类型.png)
 
 ```bash
 [root@docker-server1 ~]# docker run  -d -it --name web7 --network host nginx
@@ -233,18 +228,13 @@ lo: flags=73<UP,LOOPBACK,RUNNING>  mtu 65536
 
 bridge模式是docker的**默认网络模式**，不写--network参数，就是bridge模式。**使用docker run -p时，docker实际是在iptables做了DNAT规则，实现端口转发功能。可以使用iptables -t nat -vnL查看。**
 
-![img](06.docker网络管理/13618762-f1643a51d313a889.png)
-
+![img](06.docker网络管理/Bridge网络类型.png)
 
 
 # 创建自定义网络
-
-
-
 可以基于docker命令创建自定义网络，自定义网络可以自定义ip地址范围和网关等信息。
 
 - 创建一个网络
-
 ```bash
 [root@docker-server1 ~]# docker network create -d bridge --subnet 10.10.0.0/16 --gateway 10.10.0.1 eagleslab-net
 74ee6ecdfc0382ac0abb1b46a3c90e3c6a39f0b7388aa9ba99fddc6bac72e8ce
@@ -310,72 +300,4 @@ Chain DOCKER (2 references)
     0     0 RETURN     all  --  br-74ee6ecdfc03 *       0.0.0.0/0            0.0.0.0/0           
     1    84 RETURN     all  --  docker0 *       0.0.0.0/0            0.0.0.0/0 
 ```
-
-# Docker 安装 code-server
-
-### **1 改权限（可选）**
-
-我习惯在容器里面也能使用 docker 命令，所以需要修改 docker.sock 的权限并将其映射到容器内。
-
-![img](06.docker%E7%BD%91%E7%BB%9C%E7%AE%A1%E7%90%86/v2-ac170296b9631e187a15f976f4b937cd_720w.webp)
-
-```text
-chmod a+rw /run/docker.sock # 或者 chmod a+rw /var/run/docker.sock
-```
-
-这里就看 docker.sock 文件在哪里了，都运行一遍也没关系。
-
-### **2 运行**
-
-```text
-docker run -d \
---name=code-server \
--e DEFAULT_WORKSPACE=/config/workspace \
--e PASSWORD=123 \
--e SUDO_PASSWORD=123 \
---net host \
--v /home/docker/code-server/config:/config \
--v /root:/config/workspace \
--v /run/docker.sock:/var/run/docker.sock \
--v $(which docker):/usr/bin/docker \
--v $(which docker-compose):/usr/bin/docker-compose \
---restart always \
---privileged=true \
-linuxserver/code-server:latest
-```
-
-DEFAULT_WORKSPACE 是指定 web 访问时默认的工作目录。
-PASSWORD 进入 web 页面的密码。
-SUDO_PASSWORD 是容器内使用 sudo 命令时需要的密码。（为了安全，默认账号并不是 root 运行）
-
-`-v /root:/config/workspace` 则是把宿主机的 root 目录作为工作目录。
-
-### **3 修改映射目录的权限（可选）**
-
-```text
-chmod -R 777 /root/
-```
-
-想要在容器内不出现权限问题，就改 777 权限，这个依据情况而定。
-
-SUDO_PASSWORD 是使用 sudo 命令时候使用的命令。即 root 命令。
-
-### **4 配置 code-server**
-
-### **4.1 显示顶部菜单**
-
-左上角 -> View -> Appearance -> Show Menu Bar
-
-### **4.2 修改主题颜色（个人比较喜欢黑色的背景）**
-
-设置 -> Color Theme -> Dark
-
-### **4.3 设置不显示隐藏文件夹**
-
-设置 -> 搜索 file.exclude -> Add Pattern `**/.*`
-
-### **4.4 安装扩展**
-
-- Chinese - 汉化
-- Live Server - 静态页面服务器（方便访问）
 
