--- a/SRE/Docker/05.Docker镜像制作.md
+++ b/SRE/Docker/05.Docker镜像制作.md
@@ -1,5 +1,5 @@
 # 背景介绍
-Docker镜像制作类似于虚拟机的模板制作，即按照公司的实际业务将需要安装的软件、相关配置等基础环境配置完成，然后将虚拟机再提交为模板，最后再批量从模板批量创建新的虚拟机，这样可以极大地简化业务中相同环境的虚拟机运行环境的部署工作，Docker的镜像制作分为手动制作可自动制作（基于DockerFile），企业通常都是基于DockerFile制作镜像。
+Docker 镜像制作类似于虚拟机的模板制作，即按照公司的实际业务将需要安装的软件、相关配置等基础环境配置完成，然后将虚拟机再提交为模板，最后再批量从模板批量创建新的虚拟机，这样可以极大地简化业务中相同环境的虚拟机运行环境的部署工作，Docker的镜像制作分为手动制作可自动制作（基于 DockerFile ），企业通常都是基于 DockerFile 制作镜像。
 
 # 手动制作nginx镜像
 ```shell
@@ -17,11 +17,11 @@ Usage:  docker commit [OPTIONS] CONTAINER [REPOSITORY[:TAG]]
 [root@docker-server ~]# docker run  -d -p 8081:80 ubuntu_nginx:v1
 [root@docker-server ~]# curl 127.0.0.1:8081
 ```
-**适用场景：**主要作用是将配置好的一些容器复用，再生成新的镜像。
+**适用场景**：主要作用是将配置好的一些容器复用，再生成新的镜像。
 commit是合并了save、load、export、import这几个特性的一个综合性的命令，它主要做了：
-1、将container当前的读写层保存下来，保存成一个新层
-2、和镜像的历史层一起合并成一个新的镜像
-3、如果原本的镜像有3层，commit之后就会有4层，最新的一层为从镜像运行到commit之间对文件系统的修改。
+1. 将容器当前的读写层保存成一个新层。
+2. 和镜像的历史层一起合并成一个新的镜像
+3. 如果原本的镜像有3层，commit之后就会有4层，最新的一层为从镜像运行到commit之间对文件系统的修改。
 
 # DockerFile制作镜像
 DockerFile可以说是一种可以被Docker程序解释的脚本，DockerFile是由一条条的命令组成的，每条命令对应linux下面的一条命令，Docker程序将这些DockerFile指令再翻译成真正的linux命令，其有自己的书写方式和支持的命令，Docker程序读取DockerFile并根据指令生成Docker镜像，相比手动制作镜像的方式，DockerFile更能直观地展示镜像是怎么产生的，有了写好的各种各样的DockerFIle文件，当后期某个镜像有额外的需求时，只要在之前的DockerFile添加或者修改相应的操作即可重新生成新的Docker镜像，避免了重复手动制作镜像的麻烦。
@@ -153,6 +153,3 @@ CMD ["nginx", "-g", "daemon off;"]
 ## WORKDIR
 - 为后续的RUN、CMD、ENTRYPOINT指令配置工作目录：建议使用绝对路径
 ```
-
-# 镜像上传
-
