--- a/SRE/Docker/09.Docker资源隔离.md
+++ b/SRE/Docker/09.Docker资源隔离.md
@@ -53,13 +53,11 @@ root@0e72f06bba41:/# exit
 ```
 
 ## IPC Namespace
-
 一个容器内的进程间通信，允许一个容器内的不同进程数据互相访问，但是不能跨容器访问其他容器的数据
 
 UTS Namespace包含了运行内核的名称、版本、底层体系结构类型等信息用于系统表示，其中包含了hostname和域名，它使得一个容器拥有属于自己hostname标识，这个主机名标识独立于宿主机系统和其上的其他容器。
 
 ## PID Namespace
-
 Linux系统中，有一个pid为1的进程（init/systemd）是其他所有进程的父进程，那么在每个容器内也要有一个父进程来管理其下属的进程，那么多个容器的进程通PID namespace进程隔离
 
 - 安装软件包
@@ -100,27 +98,9 @@ systemd(1)─┬─NetworkManager(638)─┬─{NetworkManager}(665)
            ├─chronyd(637)
            ├─containerd(880)─┬─{containerd}(1024)
            │                 ├─{containerd}(1025)
-           │                 ├─{containerd}(1026)
-           │                 ├─{containerd}(1047)
-           │                 ├─{containerd}(1048)
-           │                 ├─{containerd}(1049)
-           │                 ├─{containerd}(1078)
-           │                 └─{containerd}(1105)
            ├─containerd-shim(1472)─┬─nginx(1492)───nginx(1545)
            │                       ├─{containerd-shim}(1473)
            │                       ├─{containerd-shim}(1474)
-           │                       ├─{containerd-shim}(1475)
-           │                       ├─{containerd-shim}(1476)
-           │                       ├─{containerd-shim}(1477)
-           │                       ├─{containerd-shim}(1478)
-           │                       ├─{containerd-shim}(1479)
-           │                       ├─{containerd-shim}(1480)
-           │                       ├─{containerd-shim}(1482)
-           │                       ├─{containerd-shim}(1512)
-           │                       ├─{containerd-shim}(1519)
-           │                       └─{containerd-shim}(1520)
-           ├─crond(647)
-           ├─dbus-daemon(634)
            ├─dockerd(1069)─┬─docker-proxy(1456)─┬─{docker-proxy}(1457)
            │               │                    ├─{docker-proxy}(1458)
            │               │                    ├─{docker-proxy}(1459)
@@ -131,13 +111,7 @@ systemd(1)─┬─NetworkManager(638)─┬─{NetworkManager}(665)
            │               │                    └─{docker-proxy}(1465)
            │               ├─{dockerd}(1144)
            │               ├─{dockerd}(1145)
-           │               ├─{dockerd}(1146)
-           │               ├─{dockerd}(1147)
-           │               ├─{dockerd}(1148)
-           │               ├─{dockerd}(1149)
-           │               ├─{dockerd}(1150)
-           │               ├─{dockerd}(1152)
-           │               └─{dockerd}(1153)
+......
 
 [root@localhost ~]# ps aux | grep 065f06e5caa4
 ```
@@ -222,12 +196,9 @@ lo: flags=73<UP,LOOPBACK,RUNNING>  mtu 65536
         TX errors 0  dropped 0 overruns 0  carrier 0  collisions 0
 ```
 
-逻辑图
-
-![image-20210603144141780](01.docker介绍与安装/image-20210603144141780.png)
+![img](01.docker介绍与安装/docker网络隔离.png)
 
 ## User Namespace
-
 各个容器内可能会出现重名的用户和用户组名称，或重复的用户UID或者GID，那么怎么隔离各个容器内的用户空间呢？
 
 User Namespace允许在各个宿主机的各个容器空间内创建相同的用户名以及相同的uid和gid，只是此用户的有效范围仅仅是当前的容器内，不能访问另外一个容器内的文件系统，即相互隔离、互不影响、永不相见
