update linux base 1-4

--- a/SRE/Linux基础/03.Linux命令行.md
+++ b/SRE/Linux基础/03.Linux命令行.md
@@ -4,7 +4,7 @@
 
 shell是系统的**用户界面**,提供了用户与内核进行交互操作的一种接口。它接收用户输入的命令并把它送入内核去执行。实际上shell是一个**命令解释器**，它解释用户输入的命令并且把用户的意图传达给内核。（可以理解为用户与内核之间的翻译官角色）
 
-![img](03.Linux%E5%91%BD%E4%BB%A4%E8%A1%8C/OZOSHbNQHEoUDF1z.png!thumbnail)
+![img](03.Linux命令行/命令解释器.png)
 
 我们可以使用shell实现对Linux系统的大部分管理，例如：
 
