--- a/SRE/Docker/04.Docker镜像管理.md
+++ b/SRE/Docker/04.Docker镜像管理.md
@@ -14,7 +14,7 @@
 ## 搜索镜像
 `Usage:  docker search [OPTIONS] TERM`
 ```bash
-## 搜索包含关键字的镜像
+# 搜索包含关键字的镜像
 [root@docker-server ~]# docker search centos
 ```
 可以看到返回了很多包含关键字的镜像，其中包括镜像名字、描述、点赞数（表示该镜像的受欢迎程度）、是否官方创建、是否自动创建。默认输出结果按照星级评价进行排序。
@@ -25,7 +25,7 @@
 ## 下载镜像
 `Usage:  docker pull [OPTIONS] NAME[:TAG|@DIGEST]`
 ```bash
-## 下载nginx、centos、hello-world镜像
+# 下载nginx、centos、hello-world镜像
 [root@docker-server ~]# docker pull nginx
 [root@docker-server ~]# docker pull centos
 [root@docker-server ~]# docker pull hello-world
@@ -36,13 +36,13 @@
 ## 镜像列表
 `Usage:  docker image COMMAND`
 ```bash
-## 列出本地所有镜像
+# 列出本地所有镜像
 [root@docker-server ~]# docker image ls
 REPOSITORY    TAG       IMAGE ID       CREATED        SIZE
 nginx         latest    d1a364dc548d   2 weeks ago    133MB
 ...
 
-## 字段说明
+# 字段说明
 - REPOSITORY：镜像仓库名称
 - TAG：镜像的标签信息
 - 镜像ID：唯一用来标识镜像，如果两个镜像的ID相同，说明他们实际上指向了同一个镜像，只是具有不同标签名称而已
