--- a/SRE/Docker/10.Docker资源限制.md
+++ b/SRE/Docker/10.Docker资源限制.md
@@ -57,7 +57,7 @@ CONFIG_MEMCG_KMEM=y
 > 3. 特殊场景(如CPU密集型)可考虑使用cpuset-cpus绑核
 > 4. 避免过度限制导致容器性能问题
 
-## 实战案例
+## 实践案例
 
 ### 案例1: CPU无限制
 
@@ -178,7 +178,7 @@ Linux会为每个进程计算一个分数，最终会将分数最高的进程kil
 > 3. 合理设置memory-reservation作为预警
 > 4. 谨慎使用kernel-memory和oom-kill-disable
 
-## 实战案例
+## 实践案例
 如果一个容器未作内存使用限制，则该容器可以利用到系统内存最大空间，默认创建的容器没有做内存资源限制
 
 ### 案例1: MEM无限制
