--- a/SRE/Docker/05.Docker镜像制作.md
+++ b/SRE/Docker/05.Docker镜像制作.md
@@ -9,11 +9,11 @@ root@1d8e32ab39d6:/# echo 'eagleslab nginx' > /var/www/html/index.nginx-debian.h
 root@1d8e32ab39d6:/# grep daemon /etc/nginx/nginx.conf
 daemon off;
 
-## 提交为镜像
+# 提交为镜像
 Usage:  docker commit [OPTIONS] CONTAINER [REPOSITORY[:TAG]]
 [root@docker-server ~]# docker commit -a "v100" -m "my nginx image v1" 0195bc1d0f7b ubuntu_nginx:v1
 
-## 通过ubuntu_nginx:v1镜像启动容器
+# 通过ubuntu_nginx:v1镜像启动容器
 [root@docker-server ~]# docker run  -d -p 8081:80 ubuntu_nginx:v1
 [root@docker-server ~]# curl 127.0.0.1:8081
 ```
@@ -112,44 +112,44 @@ CMD ["nginx", "-g", "daemon off;"]
 
 **注意事项**
 ```shell
-## RUN
+# RUN
 - 运行指定命令
 - 每条RUN指令将在当前镜像基础上执行指定命令，并提交为新的镜像层
 - 当命令较长时可以使用\来换行
 
-## CMD
+# CMD
 - 每个Dockerfile只能有一条CMD命令。如果指定了多条命令，只有最后一条会被执行
 - CMD指令用来指定启动容器时默认执行的命令,支持三种格式:
     CMD ["executable","param1","param2"] 
     CMD command param1 param2`
     CMD ["param1","param2"]
 
-## ADD
+# ADD
 - 该命令将复制指定的src路径下内容到容器中的dest路径下
 - src可以是DockerFIle所在目录的一个相对路径，也可以是一个url，还可以是一个tar
 - dest可以是镜像内绝对路径，或者相对于工作目录的相对路径
 
-## COPY
+# COPY
 - COPY与ADD指令功能类似，当使用本地目录为源目录时，推荐使用COPY
 
-## ARG
+# ARG
 - 定义创建过程中使用到的变量；比如:HTTP_PROXY 、HTTPS_PROXY 、FTP_PROXY 、NO_PROXY不区分大小写。
 
-## FROM
+# FROM
 - 指定所创建镜像的基础镜像：为了保证镜像精简，可以选用体积较小的Alpin或Debian作为基础镜像
 
-## EXPOSE
+# EXPOSE
 - 声明镜像内服务监听的端口：该指令只是起到声明作用，并不会自动完成端口映射
 
-## ENTRYPOINT
+# ENTRYPOINT
 - 指定镜像的默认入口命令，该入口命令会在启动容器时作为根命令执行，所有传入值作为该命令的参数支持两种格式:
     ENTRYPOINT ["executable","param1","param2"]
     ENTRYPOINT command param1 param2
 - 此时CMD指令指定值将作为根命令的参数
 - 每个DockerFile中只能有一个ENTRYPOINT，当指定多个时只有最后一个起效
 
-## VOLUME: 创建一个数据卷挂载点
+# VOLUME: 创建一个数据卷挂载点
 
-## WORKDIR
+# WORKDIR
 - 为后续的RUN、CMD、ENTRYPOINT指令配置工作目录：建议使用绝对路径
 ```
