--- a/SRE/Linux基础/08.进程管理.md
+++ b/SRE/Linux基础/08.进程管理.md
@@ -23,7 +23,7 @@
 
 # 进程的生命周期
 
-![img](08.%E8%BF%9B%E7%A8%8B%E7%AE%A1%E7%90%86/WPYNtDaMQ3fkYeQs.png!thumbnail)
+![01.进程生命周期](08.%E8%BF%9B%E7%A8%8B%E7%AE%A1%E7%90%86/01.%E8%BF%9B%E7%A8%8B%E7%94%9F%E5%91%BD%E5%91%A8%E6%9C%9F.png)
 
 父进程复制自己的地址空间(fork)创建一个新的(子)进程结构。每个新进程分配一个唯一的进程ID(PID)，满足跟踪安全性之需。PID和父进程ID(PPID)是子进程环境的元素，任何进程都可以创建子进程，所有进程都是第一个系统进程的后代。
 
@@ -503,7 +503,7 @@ user1    pts/1   192.168.175.1     14:40   20:34   0.02s  0.02s -bas
 
 进程默认启动时nice为0，优先级为20
 
-<img src="08.进程管理/image-20240511115145134.png" alt="image-20240511115145134" style="zoom: 67%;" />
+![02.进程优先级](08.%E8%BF%9B%E7%A8%8B%E7%AE%A1%E7%90%86/02.%E8%BF%9B%E7%A8%8B%E4%BC%98%E5%85%88%E7%BA%A7.png)
 
 nice值越高表示优先级越低，例如19，该进程容易将CPU使用量让给其他进程
 
