--- a/SRE/Linux基础/09.存储管理.md
+++ b/SRE/Linux基础/09.存储管理.md
@@ -6,7 +6,7 @@
 
 机械硬盘是靠机械马达以固定的速度转动磁盘，然后再有机械臂的摆动，让磁头可以读取盘片上的磁性信息，这种工作原理的硬盘我们成为机械硬盘。
 
-![img](09.%E5%AD%98%E5%82%A8%E7%AE%A1%E7%90%86/DC7tFBzbdLqoAxvg.png!thumbnail)
+![01.机械硬盘hdd](09.%E5%AD%98%E5%82%A8%E7%AE%A1%E7%90%86/01.%E6%9C%BA%E6%A2%B0%E7%A1%AC%E7%9B%98hdd.png)
 
 由于机械硬盘是依靠机械的运动来读写数据的，大家都知道机械在长时间运转的过程中是会产生一定的损耗，所以机械硬盘虽然理论上寿命很长，但随着时间的变长，机械磨损变大，导致磁头定位的误差变大，从而影响到硬盘的速度，这个就是为什么你的老电脑开机缓慢，运行卡顿的原因了。
 
@@ -14,15 +14,15 @@
 
 固态硬盘依靠主控芯片来将数据的二进制信息写入浮栅晶体管中，以这样的原理实现数据的读取和写入。
 
-![img](09.%E5%AD%98%E5%82%A8%E7%AE%A1%E7%90%86/7jH10n9jig0BDlLr.png!thumbnail)
+![02.固态硬盘ssd](09.%E5%AD%98%E5%82%A8%E7%AE%A1%E7%90%86/02.%E5%9B%BA%E6%80%81%E7%A1%AC%E7%9B%98ssd.png)
 
 固态硬盘在读取和写入数据的时候完全是依靠数字电路实现的，所以并没有机械硬盘的机械磨损，而且也没有在磁盘上定位读写的延迟，所以固态硬盘的数据读写效率是远远高于机械硬盘的，但是也有一定的缺点，由于浮栅晶体管的设计原理，每次数据的读写，都会让浮栅晶体管所需要的电压更高，一定寿命以后，固态硬盘就会失效。并且固态硬盘如果发生了损坏，数据恢复的难度是大于机械硬盘的，所以为了可靠性，企业目前还是在大量使用机械硬盘的。
 
-<img src="09.%E5%AD%98%E5%82%A8%E7%AE%A1%E7%90%86/image-20191214142929008.png" alt="image-20191214142929008" style="zoom:50%;" />
+<img src="09.%E5%AD%98%E5%82%A8%E7%AE%A1%E7%90%86/03.%E5%9B%BA%E6%80%81%E7%A1%AC%E7%9B%98%E8%AE%BE%E8%AE%A11.png" alt="03.固态硬盘设计1" style="zoom: 50%;" />
 
-<img src="09.%E5%AD%98%E5%82%A8%E7%AE%A1%E7%90%86/image-20191214143122989.png" alt="image-20191214143122989" style="zoom: 67%;" />
+<img src="09.%E5%AD%98%E5%82%A8%E7%AE%A1%E7%90%86/04.%E5%9B%BA%E6%80%81%E7%A1%AC%E7%9B%98%E8%AE%BE%E8%AE%A12.png" alt="04.固态硬盘设计2" style="zoom: 50%;" />
 
-<img src="09.%E5%AD%98%E5%82%A8%E7%AE%A1%E7%90%86/image-20191214142552504.png" alt="image-20191214142552504" style="zoom: 50%;" />
+<img src="09.%E5%AD%98%E5%82%A8%E7%AE%A1%E7%90%86/05.%E5%9B%BA%E6%80%81%E7%A1%AC%E7%9B%98%E8%AE%BE%E8%AE%A13.png" alt="05.固态硬盘设计3" style="zoom:50%;" />
 
 # 硬盘设备命名
 
@@ -38,16 +38,16 @@
   * 扩展分区内部可以逻辑上划分多个区域，但是在分区表中都算在一个分区内
   * 如果作为系统盘，必须要设置一个激活分区，用于存放系统的引导文件
 
-![img](09.%E5%AD%98%E5%82%A8%E7%AE%A1%E7%90%86/gttbnynwrda.jpg)
+![06.MBR分区表](09.%E5%AD%98%E5%82%A8%E7%AE%A1%E7%90%86/06.MBR%E5%88%86%E5%8C%BA%E8%A1%A8.jpg)
 
 * GPT
   * 管理硬盘大小不能超过18EB，目前人类还没制造出单块这么大的硬盘
   * 理论上支持无限分区，在win10系统上，最多可以分128个分区
   * 如果作为系统盘，**必须要创建一个EFI分区，用于存放系统的引导文件**建议ESP分区512M，对齐8扇区4096字节
 
-![image-20210714095241528](09.%E5%AD%98%E5%82%A8%E7%AE%A1%E7%90%86/image-20210714095241528.png)
+![07.gpt分区表](09.%E5%AD%98%E5%82%A8%E7%AE%A1%E7%90%86/07.gpt%E5%88%86%E5%8C%BA%E8%A1%A8.png)
 
-![image-d1](09.%E5%AD%98%E5%82%A8%E7%AE%A1%E7%90%86/d1.jpg)
+![08.分区演示](09.%E5%AD%98%E5%82%A8%E7%AE%A1%E7%90%86/08.%E5%88%86%E5%8C%BA%E6%BC%94%E7%A4%BA.png)
 
 电脑启动的时候：
 
@@ -336,7 +336,7 @@ Linux系统中常见的目录名称以及相应内容
 
 设备文件名称：
 
-![image.png](09.%E5%AD%98%E5%82%A8%E7%AE%A1%E7%90%86/1.png)
+![09.设备命名规则](09.%E5%AD%98%E5%82%A8%E7%AE%A1%E7%90%86/09.%E8%AE%BE%E5%A4%87%E5%91%BD%E5%90%8D%E8%A7%84%E5%88%99.png)
 
 # 文件系统与数据资料
 
@@ -346,11 +346,9 @@ Linux系统中常见的目录名称以及相应内容
 
 文件系统的作用是合理规划硬盘，以保证用户正常的使用需求。Linux系统支持数十种的文件系统。但是从大的角度上来看，其实主要分为日志式文件系统和索引式文件系统两种。
 
+<img src="09.%E5%AD%98%E5%82%A8%E7%AE%A1%E7%90%86/10.%E6%97%A5%E5%BF%97%E6%96%87%E4%BB%B6%E7%B3%BB%E7%BB%9F.png" alt="10.日志文件系统" style="zoom: 80%;" />
 
-
-![image-d2](09.%E5%AD%98%E5%82%A8%E7%AE%A1%E7%90%86/d2.jpg)
-
-![image-d3](09.%E5%AD%98%E5%82%A8%E7%AE%A1%E7%90%86/d3.jpg)
+<img src="09.%E5%AD%98%E5%82%A8%E7%AE%A1%E7%90%86/11.%E6%97%A5%E5%BF%97%E6%96%87%E4%BB%B6%E7%B3%BB%E7%BB%9F2.jpg" alt="11.日志文件系统2" style="zoom:80%;" />
 
 ## Linux常见的文件系统
 
@@ -377,7 +375,7 @@ Linux系统中常见的目录名称以及相应内容
 - block：用于存储数据
 
 计算机系统在发展过程中产生了众多的文件系统，为了使用户在读取或写入文件时不用关心底层的硬盘结构，Linux内核中的软件层为用户程序提供了一个VFS（Virtual File System，虚拟文件系统）接口，这样用户实际上在操作文件时就是统一对这个虚拟文件系统进行操作了。
-![image.png](09.%E5%AD%98%E5%82%A8%E7%AE%A1%E7%90%86/2.png)
+![12.虚拟文件接口](09.%E5%AD%98%E5%82%A8%E7%AE%A1%E7%90%86/12.%E8%99%9A%E6%8B%9F%E6%96%87%E4%BB%B6%E6%8E%A5%E5%8F%A3.png)
 
 ## mkfs工具
 
@@ -787,7 +785,7 @@ quotaon: Your kernel probably supports ext4 quota feature but you are using exte
 [root@localhost ~]# edquota -u user1
 ```
 
-<img src="09.%E5%AD%98%E5%82%A8%E7%AE%A1%E7%90%86/image-20241115161504629.png" alt="image-20241115161504629" style="zoom:80%;" />
+![13.磁盘容量配额1](09.%E5%AD%98%E5%82%A8%E7%AE%A1%E7%90%86/13.%E7%A3%81%E7%9B%98%E5%AE%B9%E9%87%8F%E9%85%8D%E9%A2%9D1.png)
 
 - 可以将针对user1的限制复制给user2
 
