--- a/SRE/Linux基础/06.用户权限管理.md
+++ b/SRE/Linux基础/06.用户权限管理.md
@@ -63,7 +63,7 @@ uid=0(root) gid=0(root) 组=0(root) 环境=unconfined_u:unconfined_r:unconfined_
 -rw-------. 1 root root 1241 4月   4 16:53 anaconda-ks.cfg
 ```
 
-![01.文件属性介绍](06.%E7%94%A8%E6%88%B7%E6%9D%83%E9%99%90%E7%AE%A1%E7%90%86/01.%E6%96%87%E4%BB%B6%E5%B1%9E%E6%80%A7%E4%BB%8B%E7%BB%8D.png)
+![01.文件属性介绍](06.用户权限管理/01.文件属性介绍.png)
 
 * 查看运行进程的用户名，ps命令会在后面进程管理部分讲解
 
