--- a/SRE/Python/01.Python基础/02.Python基础语法.md
+++ b/SRE/Python/01.Python基础/02.Python基础语法.md
@@ -146,8 +146,8 @@ print(a)
    驼峰命名法是将多个单词连接在一起，每个单词首字母大写，这种命名方式常用于类、函数和对象的命名。
 
 ```python
-FirstName = '牛'
-LastName = '老师'
+FirstName = '英格'
+LastName = '科技'
 
 print("你的名字是:",FirstName + LastName)
 ```
@@ -179,16 +179,18 @@ print( FIRST_STR+ " " + SECOND_STR)
 ```python
 a = "变量1"
 b = "变量2"
+print(id(a), id(b))
 ```
 
- ![img](02.Python%E5%9F%BA%E7%A1%80%E8%AF%AD%E6%B3%95/1140672815.png) 
+ ![img](02.Python基础语法/变量赋值1.png) 
 
 ```python
 a = "变量1"
 b = a
+print(id(a), id(b))
 ```
 
- ![img](02.Python%E5%9F%BA%E7%A1%80%E8%AF%AD%E6%B3%95/4238420988.png) 
+ ![img](02.Python基础语法/变量赋值2.png) 
 
 ## 常量
 
@@ -391,8 +393,8 @@ print("Percentage: %.2f%%" % (percentage * 100))  # 输出: Percentage: 75.00%
 
 ## 整数(int)
 
-- **描述：**表示没有小数部分的数字，可以是正数、负数或零。
-- **特性：**
+- **描述**：表示没有小数部分的数字，可以是正数、负数或零。
+- **特性**：
   - Python 3 中的 `int` 类型是无限大小的。这意味着你可以创建非常大的整数，而不必担心溢出（overflow）的问题。
   - Python 会根据整数的大小自动调整内存使用，因此可以存储任意大小的整数，只要计算机的内存允许。
   - 支持基本的算术运算，如加、减、乘、除等。
@@ -434,7 +436,7 @@ print(type(b))
 
 ```python
 Greeting = "Welcome to 英格科技"
-Name = "牛老师"
+Name = "同学们"
 print(Greeting + " " + Name)	# 字符串可以通过+号进行拼接
 
 # Output:
@@ -549,8 +551,8 @@ print(words.isdigit())   # 判断字符串是否只由数字组成
 
 ## 布尔类型(bool)
 
-- **描述：**布尔类型只有两个值：`True` 和 `False`。
-- **特性：**
+- **描述**：布尔类型只有两个值：`True` 和 `False`。
+- **特性**：
   - 通常用于条件判断和逻辑运算。
   - 布尔值在逻辑表达式中可以进行运算。
 
