--- a/SRE/Python/01.Python基础/04.Python文件操作.md
+++ b/SRE/Python/01.Python基础/04.Python文件操作.md
@@ -71,7 +71,7 @@ f = open("文件名", "访问方式")
 
 ### 文件编码
 
-f=open(...)是由操作系统打开文件，那么如果我们没有为open指定编码，那么打开文件的默认编码很明显是操作系统说了算了，操作系统会用自己的默认编码去打开文件，在windows下是gbk，在linux下是utf-8。
+`f=open(...)`是由操作系统打开文件，那么如果我们没有为open指定编码，那么打开文件的默认编码很明显是操作系统说了算了，操作系统会用自己的默认编码去打开文件，在windows下是gbk，在linux下是utf-8。
 
 ```python
 f=open('example.txt','r',encoding='utf-8')
