--- a/SRE/Python/02.Python面向函数/06.初识算法.md
+++ b/SRE/Python/02.Python面向函数/06.初识算法.md
@@ -118,7 +118,7 @@ foo(1)
 
 - [点击开始汉诺塔游戏](http://file.eagleslab.com:8889/%E8%AF%BE%E7%A8%8B%E7%9B%B8%E5%85%B3%E8%BD%AF%E4%BB%B6/%E4%BA%91%E8%AE%A1%E7%AE%97%E8%AF%BE%E7%A8%8B/Python%E7%9B%B8%E5%85%B3/hanoi/)
 
-<img src="06.%E5%88%9D%E8%AF%86%E7%AE%97%E6%B3%95/image-20241009104523929.png" alt="image-20241009104523929" style="zoom:80%;" />
+<img src="06.初识算法/汉诺塔.png" alt="image-20241009104523929" style="zoom:80%;" />
 
 如果层数较多的话，只靠人力是很难完成的。据统计，如果按照神话故事里的64片来计算，假设每移动一步需要1秒，那么如果64片全部移动完成，大概需要18446744073709551615秒，转换为年，大概是5845.42亿年。然而地球存在也不过45亿年....
 
@@ -148,7 +148,7 @@ move(n,'A','B','C')
 
 ## 二分查找算法
 
-<img src="06.%E5%88%9D%E8%AF%86%E7%AE%97%E6%B3%95/image-20241009161706993.png" alt="image-20241009161706993" style="zoom:80%;" />
+<img src="06.初识算法/二分查找.png" alt="image-20241009161706993" style="zoom:80%;" />
 
 接下来我们使用不同的查找方式，来查找某个元素，看一下需要查找多少次才能找到
 
@@ -356,8 +356,8 @@ print("插入排序结果:", arr)
 - **快速排序**：效率较高的一种排序算法，通过“分而治之”的方法将问题递归分解为更小的部分。
 - **插入排序**：将每个元素插入到前面已排序部分的正确位置，适合数据量较小且基本有序的数组。
 
-# 进阶练习
-
-### 算法练习：[力扣](https://leetcode.cn/)
-
+# 扩展阅读
 从现在开始坚持刷算法题，日积月累，你终将成为算法大佬。如果你现在觉得还早，那么......
+
+[力扣](https://leetcode.cn/)
+
