--- a/SRE/Python/01.Python基础/03.Python数据结构.md
+++ b/SRE/Python/01.Python基础/03.Python数据结构.md
@@ -169,7 +169,7 @@ print(tuple)
 
 在元组tuple中，包含一个list类型的数据，由于list是可以变的，所以我们可以更改元组里list的值，但是元组本身的地址空间是不变的。
 
-<img src="03.Python%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/image-20240904095734746.png" alt="image-20240904095734746" style="zoom:80%;" />
+<img src="03.Python数据结构/可变元组.png" alt="image-20240904095734746" style="zoom:80%;" />
 
 # 字典(Dict)
 
@@ -503,7 +503,7 @@ if 条件:
 
 
 
-<img src="03.Python%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/image-20240904142740373.png" alt="image-20240904142740373" style="zoom:80%;" />
+<img src="03.Python数据结构/流程控制.png" alt="image-20240904142740373" style="zoom:80%;" />
 
 ### 单分支判断
 
@@ -795,3 +795,5 @@ else:
    - **2:1**
    - **3:0**
 
+# 扩展阅读
+**内置类型**：https://docs.python.org/zh-cn/3.9/library/stdtypes.html#
