--- a/SRE/Python/02.Python面向函数/08.常用模块.md
+++ b/SRE/Python/02.Python面向函数/08.常用模块.md
@@ -8,7 +8,7 @@
 2. 将对象从一个地方传递到另一个地方。
 3. 使程序更具维护性。
 
-<img src="08.%E5%B8%B8%E7%94%A8%E6%A8%A1%E5%9D%97/image-20241018165407028.png" alt="image-20241018165407028" style="zoom: 80%;" /> 
+<img src="08.常用模块/序列化.png" alt="序列化" style="zoom: 80%;" /> 
 
 python可序列化的数据类型，序列化出来之后的结果如下:
 
@@ -596,7 +596,7 @@ print(time.localtime())
 **几种格式之间的转换**
 
 
- <img src="08.%E5%B8%B8%E7%94%A8%E6%A8%A1%E5%9D%97/987936105.png" alt="img" style="zoom:80%;" /> 
+ <img src="08.常用模块/时间格式转化1.png" alt="时间格式转化1" style="zoom:80%;" /> 
 
 ```python
 import time
@@ -618,7 +618,7 @@ ft = time.strftime('%Y/%m/%d %H:%M:%S',st)
 print(ft)
 ```
 
- <img src="08.%E5%B8%B8%E7%94%A8%E6%A8%A1%E5%9D%97/838049513.png" alt="img" style="zoom:80%;" /> 
+ <img src="08.常用模块/时间格式转化2.png" alt="时间格式转化2" style="zoom:80%;" /> 
 
 ```python
 import time
@@ -718,7 +718,7 @@ def v_code():
 print(v_code())
 ```
 
-# OS模块
+# os模块
 
 os模块是与操作系统交互的一个接口
 
