--- a/SRE/Python/02.Python面向函数/09.异常处理.md
+++ b/SRE/Python/02.Python面向函数/09.异常处理.md
@@ -33,7 +33,7 @@ res2=1+'str'
 异常就是程序运行时发生错误的信号
 异常之后的代码就不执行
 
- ![img](09.%E5%BC%82%E5%B8%B8%E5%A4%84%E7%90%86/1480155108.png) 
+ ![img](09.异常处理/程序异常.png) 
 
 ## 异常种类
 
