--- a/SRE/Python/Python面向函数/常用模块.md
+++ b/SRE/Python/Python面向函数/常用模块.md
@@ -8,7 +8,7 @@
 2. 将对象从一个地方传递到另一个地方。
 3. 使程序更具维护性。
 
-<img src="08.常用模块/序列化.png" alt="序列化" style="zoom: 80%;" /> 
+<img src="常用模块/序列化.png" alt="序列化" style="zoom: 80%;" /> 
 
 python可序列化的数据类型，序列化出来之后的结果如下:
 
@@ -21,8 +21,8 @@ python可序列化的数据类型，序列化出来之后的结果如下:
 | True       | true   |
 | False      | false  |
 | None       | null   |
-
-## json模块
+ 
+## json 模块
 
 Python 的 `json` 模块用于处理 JSON（JavaScript Object Notation）数据格式。JSON 是一种轻量级的数据交换格式，易于人类阅读和编写，同时也易于机器解析和生成。`json` 模块提供了简单的方法来编码（序列化）和解码（反序列化）JSON数据。
 
@@ -142,7 +142,7 @@ print(json_dic2)
 }
 ```
 
-## pickle模块
+## pickle 模块
 
 Python 的 `pickle` 模块用于对象的序列化（将对象转换为字节流）和反序列化（将字节流转换回对象）。这使得在程序之间传递对象或将对象保存到文件中变得非常方便。
 
@@ -189,7 +189,7 @@ loaded_data_from_bytes = pickle.loads(data_bytes)
 print(loaded_data_from_bytes)
 ```
 
-## shelve模块
+## shelve 模块
 
 Python 的 `shelve` 模块提供了一种简单的持久化存储方式，类似于字典（dictionary），但它可以将数据持久化到文件中。`shelve` 模块允许将 Python 对象存储在文件中，以便在后续的程序运行中重新加载。
 
@@ -279,7 +279,7 @@ with shelve.open('my_shelf.db') as shelf:
     print(shelf.get('courses', 'No courses found'))  # 输出: No courses found
 ```
 
-## hashlib模块
+## hashlib 模块
 
 Python 的 `hashlib` 模块提供了多种安全哈希和消息摘要算法的接口。这些算法用于生成数据的唯一哈希值，广泛应用于数据完整性校验、密码存储和数字签名等领域。
 
@@ -405,11 +405,11 @@ alice    | 99b1c2188db85afee403b1536010c2c9
 
 所以，要确保存储的用户口令不是那些已经被计算出来的常用口令的MD5，这一方法通过对原始口令加一个复杂字符串来实现，俗称“加盐”
 
-# collections模块
+# collections 模块
 
-在内置数据类型（dict、list、set、tuple）的基础上，collections模块还提供了几个额外的数据类型：Counter、deque、defaultdict、namedtuple和OrderedDict等。
+在内置数据类型（dict、list、set、tuple）的基础上，collections 模块还提供了几个额外的数据类型：Counter、deque、defaultdict、namedtuple 和 OrderedDict 等。
 
-1. namedtuple: 生成可以使用名字来访问元素内容的tuple
+1. namedtuple: 生成可以使用名字来访问元素内容的 tuple
 
 2. deque: 双端队列，可以快速的从另外一侧追加和推出对象
 
@@ -488,11 +488,11 @@ print(result)
 ```
 
 ```python
-#defaultdict
+# defaultdict
 from collections import defaultdict
 
 li = [11,22,33,44,55,77,88,99,90]
-result=defaultdict(list)
+result = defaultdict(list)
 
 for row in li:
     if row > 66:
@@ -522,7 +522,7 @@ Counter({'s': 6, 'q': 5, 'a': 5, 'x': 5, 'w': 5, 'z': 3})
 
 # 时间相关的模块
 
-## time模块
+## time 模块
 
 常用方法
 
@@ -533,9 +533,9 @@ Counter({'s': 6, 'q': 5, 'a': 5, 'x': 5, 'w': 5, 'z': 3})
 
 表示时间的三种方式
 
-在Python中，通常有这三种方式来表示时间：时间戳、结构化的时间(struct_time)、格式化的时间字符串(Format String)：
+在 Python 中，通常有这三种方式来表示时间：时间戳、结构化的时间(struct_time)、格式化的时间字符串(Format String)：
 
-1. **时间戳**(timestamp) ：通常来说，时间戳表示的是从1970年1月1日00:00:00开始按秒计算的偏移量。我们运行“type(time.time())”，返回的是float类型。
+1. **时间戳**(timestamp) ：通常来说，时间戳表示的是从1970年1月1日00:00:00开始按秒计算的偏移量。我们运行“type(time.time())”，返回的是 float 类型。
 
 2. 格式化的时间字符串(Format String)： ‘1999-12-06’
 
@@ -646,7 +646,7 @@ print('过去了%d年%d月%d天%d小时%d分钟%d秒'%(struct_time.tm_year-1970,
                                        struct_time.tm_min,struct_time.tm_sec))
 ```
 
-## datatime模块
+## datatime 模块
 
 某些情况下，我们需要写一个定时的任务，比如几分钟后，几分钟前，这种情况下，用time模块就不太好操作。这个时候我们需要datatime模块来完成这个操作
 ```python
@@ -676,7 +676,7 @@ print(current_time.replace(year=1989,month=4,day=25))  # 1989-04-25 18:49:05.898
 print(datetime.date.fromtimestamp(1232132131))  # 2009-01-17
 ```
 
-# random模块
+# random 模块
 
 用来生成随机数模块
 
@@ -718,11 +718,11 @@ def v_code():
 print(v_code())
 ```
 
-# os模块
+# os 模块
 
-os模块是与操作系统交互的一个接口
+与操作系统交互接口
 
-当前执行这个python文件的工作目录相关的**工作路径**
+当前执行这个 python 文件的工作目录相关的**工作路径**
 
 | os.getcwd()         | 获取当前工作目录，即当前python脚本工作的目录路径 |
 | :------------------ | :----------------------------------------------- |
@@ -798,7 +798,7 @@ os.stat_result(st_mode=33206, st_ino=36310271995704245, st_dev=2088613962, st_nl
 | st_mtime | 最后一次修改的时间                                           |
 | st_ctime | 由操作系统报告的"ctime"。在某些系统上（如Unix）是最新的元数据更改的时间，在其它系统上（如Windows）是创建时间（详细信息参见平台的文档） |
 
-# sys模块
+# sys 模块
 
 sys模块是与python解释器交互的一个接口
 
@@ -809,11 +809,11 @@ sys模块是与python解释器交互的一个接口
 | sys.path     | 返回模块的搜索路径，初始化时使用PYTHONPATH环境变量的值 |
 | sys.platform | 返回操作系统平台名称                                   |
 
-# re模块
+# re 模块
 
 ## 正则表达式
 
-正则就是用一些具有特殊含义的符号组合到一起（称为正则表达式）来描述字符或者字符串的方法。或者说：正则就是用来描述一类事物的规则。（在Python中）它内嵌在Python中，并通过 re 模块实现。正则表达式模式被编译成一系列的字节码，然后由用 C 编写的匹配引擎执行。
+正则就是用一些具有特殊含义的符号组合到一起（称为正则表达式）来描述字符或者字符串的方法。或者说：正则就是用来描述一类事物的规则。（在Python中）它内嵌在 Python 中，并通过 re 模块实现。正则表达式模式被编译成一系列的字节码，然后由用 C 编写的匹配引擎执行。
 
 | 元字符 | 匹配内容                                                     |
 | :----- | :----------------------------------------------------------- |
@@ -960,7 +960,7 @@ print(ret.group(1))
 print(ret.group())
 ```
 
-# shutil模块
+# shutil 模块
 
 `shutil` 是 Python 的标准库之一，提供了许多高级文件操作，例如复制和移动文件，以及创建和提取压缩文件
 
