--- a/SRE/Python/Python面向函数/装饰器函数.md
+++ b/SRE/Python/Python面向函数/装饰器函数.md
@@ -7,7 +7,7 @@
 
 ## 案例切入
 
-已知有一个函数`func1()`，作用是输出一句话。现在我们想要给他增加额外的功能。但是为了保障已有功能的稳定，不能更改原函数。
+已知有一个函数 `func1()`，作用是输出一句话。现在我们想要给他增加额外的功能。但是为了保障已有功能的稳定，不能更改原函数。
 
 ```python
 def func1():
@@ -19,15 +19,13 @@ def func1():
 # hello python
 ```
 
-可以想想应该怎么做？
-
-让我们一起研究一下：
+可以想想应该怎么做？让我们一起研究一下：
 
 ```python
 # 实现
 def func2(func):
     def inner():
-		print("hello world")
+        print("hello world")
         func()
         print("hello python")
     return inner
@@ -35,15 +33,11 @@ def func2(func):
 func1 = func2(func1)
 func1()
 
-# Output:
-hello world
-in func1
-hello pythons
 ```
 
 ## 装饰器形成的过程
 
-如果我想**测试某个函数**的执行时间
+如果我想测试某个函数的执行时间
 
 ```python
 import time
@@ -62,7 +56,7 @@ func1 = timer(func1)  # 将函数本身做为参数传递进去
 func1()
 ```
 
-这个时候，如果有很多个函数都需要测试他们的执行时间，岂不是每次都需要`func1 = timer(func1)`？这样是比较麻烦的，而且不利于代码的可读性和后期维护。这里我们可以使用python中的一种特殊的语法结构`语法糖`，来更为简便的使用装饰器。
+如果有很多个函数都需要测试它们的执行时间，每次都需要 `func1 = timer(func1)` 是比较麻烦的，而且不利于代码的可读性和后期维护。这里我们可以使用 python 中的一种特殊的语法结构**语法糖**，来更为简便的使用装饰器。
 
 我们将上述代码修改如下：
 
@@ -83,7 +77,7 @@ def func1():
     time.sleep(1)
     print('in func1')
 
-func1()
+func1() 
 ```
 
 ## 装饰带参数的函数
@@ -276,18 +270,18 @@ add 执行时间: 1.0128秒
 
 ```python
 def wrapper1(func):
-    def inner():
+    def inner1():
         print('第一个装饰器，在程序运行之前')
         func()
         print('第一个装饰器，在程序运行之后')
-    return inner
+    return inner1
 
 def wrapper2(func):
-    def inner():
+    def inner2():
         print('第二个装饰器，在程序运行之前')
         func()
         print('第二个装饰器，在程序运行之后')
-    return inner
+    return inner2
 
 @wrapper1
 @wrapper2
@@ -295,13 +289,10 @@ def f():
     print('Hello')
 
 f()
+# f = wrapper2(f) -> func = f, return inner2
+# f = wrapper1(f) -> func = inner2, return inner1
+# f() -> inner1() -> inner2() -> f() -> inner2() -> inner1()
 
-# Output:
-第一个装饰器，在程序运行之前
-第二个装饰器，在程序运行之前
-Hello
-第二个装饰器，在程序运行之后
-第一个装饰器，在程序运行之后
 ```
 
 `@wrapper2` 首先应用于 `f`，然后 `@wrapper1` 应用于 `wrapper2` 返回的结果。
@@ -395,4 +386,3 @@ def outer(func):
         return re
     return inner
 ```
-
