--- a/SRE/Python/Python面向函数/迭代器与生成器.md
+++ b/SRE/Python/Python面向函数/迭代器与生成器.md
@@ -2,7 +2,7 @@
 
 ## 什么叫做迭代
 
-通过之前的学习，我们已经知道对于**list、tuple、str**等类型的数据，我们可以使用`for i in xxx`的语法进行循环取值，我们把这样的过程称之为**遍历**，也叫做**迭代**
+通过之前的学习，我们已经知道对于 **list、tuple、str** 等类型的数据，我们可以使用 `for i in xxx` 的语法进行循环取值，我们把这样的过程称之为**遍历**，也叫做**迭代**
 
 如下：
 
@@ -21,11 +21,9 @@ for k,v in dic.items():
 # ......
 ```
 
-Q：整数类型可以迭代吗？可以动手试一下....
-
 ## 如何判断一个对象是否可迭代
 
-我们可以用Python中内置的`isinstance()`方法来判断某个对象是**Iterable对象**，也可以称之为**可迭代对象**
+我们可以用 Python 中内置的 `isinstance()` 方法来判断某个对象是 **Iterable 对象**，也可以称之为**可迭代对象**
 
 ```python
 # 字符串、列表、元组、字典、集合都可以被for循环，说明他们都是可迭代的
@@ -53,13 +51,13 @@ False
 
 # 迭代器
 
- Python 中，**迭代器**是一种用于遍历集合（如列表、元组、字典等）中元素的对象。
+Python 中，**迭代器**是一种用于遍历集合（如列表、元组、字典等）中元素的对象。
 
-可迭代对象通过`__iter__`方法向我们提供一个迭代器，我们在迭代一个可迭代对象的时候，实际上就是先获取该对象提供的一个迭代器，然后通过这个迭代器来依次获取对象中的每一个数据。
+可迭代对象通过 `__iter__` 方法向我们提供一个迭代器，我们在迭代一个可迭代对象的时候，实际上就是先获取该对象提供的一个迭代器，然后通过这个迭代器来依次获取对象中的每一个数据。
 
-上面讲到迭代是访问集合元素的一种方式。而迭代器是一个可以记住遍历的位置的对象。迭代器对象从集合的第一个元素开始访问，直到所有的元素被访问完结束。迭代器只能往前不会后退。
+上面讲到迭代是访问集合元素的一种方式。而迭代器是一个可以记住遍历的位置的对象。迭代器对象从集合的第一个元素开始访问，直到所有的元素被访问完结束，迭代器只能往前不会后退。
 
-**那么也就是说，一个具备了`__iter__`方法的对象，就是一个可迭代对象。**
+**那么也就是说，一个具备了 `__iter__` 方法的对象，就是一个可迭代对象。**
 
 ```python
 l = [1, 2, 3, 4]
@@ -75,15 +73,15 @@ print(dir(s))
 
 ## 迭代器的本质
 
-我们分析对可迭代对象进行迭代使用的过程，发现每迭代一次（即在for...in...中每循环一次）都会返回对象中的下一条数据，一直向后读取数据直到迭代了所有数据后结束。那么，在这个过程中就应该有一个“人”去记录每次访问到了第几条数据，以便每次迭代都可以返回下一条数据。我们把这个能帮助我们进行数据迭代的“人”称为**迭代器(Iterator)**。
+我们分析对可迭代对象进行迭代使用的过程，发现每迭代一次（即在 `for...in...` 中每循环一次）都会返回对象中的下一条数据，一直向后读取数据直到迭代了所有数据后结束。那么，在这个过程中就应该有一个“人”去记录每次访问到了第几条数据，以便每次迭代都可以返回下一条数据。我们把这个能帮助我们进行数据迭代的“人”称为**迭代器(Iterator)**。
 
 ## 迭代器协议
 
-迭代器遵循迭代协议，内部主要定义了`__iter__()`和`__next__()`两个方法
+迭代器遵循迭代协议，内部主要定义了 `__iter__()` 和 `__next__()` 两个方法
 
-- `__iter__()`方法用于初始化一个迭代器，返回迭代器本身
+- `__iter__()` 方法用于初始化一个迭代器，返回迭代器本身
 
-- `__next__()`方法用于迭代下一个数据。当没有元素可返回时，抛出 `StopIteration` 异常。
+- `__next__()` 方法用于迭代下一个数据。当没有元素可返回时，抛出 `StopIteration` 异常。
 
 ## 初始化迭代器
 
@@ -105,7 +103,7 @@ item = list_iter.__next__()
 print(item)
 ```
 
-如果超出迭代范围，会触发**StopIteration**异常。我们可以加上异常处理，取完值后自动停止
+如果超出迭代范围，会触发 **StopIteration** 异常。我们可以加上异常处理，取完值后自动停止
 
 ```python
 list1 = [1,2,3,'a','b','c']
@@ -121,7 +119,7 @@ while True:
 
 ## 如何判断一个对象是迭代器
 
-我们同样可以用内置的`isinstance()`方法来判断某个对象是否是**Iterator 对象(迭代器)**
+我们同样可以用内置的 `isinstance()` 方法来判断某个对象是否是**Iterator 对象(迭代器)**
 
 ```python
 from collections.abc import Iterator
@@ -222,12 +220,11 @@ for i in range(5):
 
 ## send
 
-send 获取下一个值的效果和next基本一致
-只是在获取下一个值的时候，给上一yield的**位置**传递一个数据
-使用send的注意事项
-
-- 第一次使用生成器的时候 是用next获取下一个值
-- 最后一个yield不能接受外部的值
+- send 获取下一个值的效果和next基本一致
+- 在获取下一个值的时候，给上一个 yield 的位置传递一个数据
+- 使用 send 的注意事项
+  - 第一次使用生成器的时候 是用next获取下一个值
+  - 最后一个 yield 不能接受外部的值
 
 ```python
 def generator():
