--- a/SRE/Python/Python面向函数/内置函数与匿名函数.md
+++ b/SRE/Python/Python面向函数/内置函数与匿名函数.md
@@ -6,9 +6,13 @@ https://docs.python.org/zh-cn/3.9/library/functions.html
 
 ## 作用域相关
 
-- locals ：函数会以字典的类型返回当前位置的全部局部变量。
-- globals：函数以字典的类型返回全部全局变量。
+### `locals()`
+函数会以字典的类型返回当前位置的全部局部变量。
 
+### `globals()`
+函数以字典的类型返回全部全局变量。
+
+**示例**
 ```python
 a = 1
 b = 2
@@ -28,7 +32,7 @@ func(3)
 
 ## 字符串类型代码执行
 
-### eval()
+### `eval()`
 
 计算指定表达式的值，并返回最终结果
 
@@ -43,7 +47,7 @@ print(ret)
 eval('print("Hello world")')
 ```
 
-### exec()
+### `exec()`
 
 执行字符串类型的代码
 
@@ -55,49 +59,37 @@ for i in range(5):
 
 exec(s)
 
-# Output:
-0
-1
-2
-3
-4
 ```
 
-### compile()
+### `compile()`
 
 用于将源代码编译成字节码，从而可以在后续执行中使用。这个函数的主要作用是将字符串形式的代码转换为可以通过 `exec()` 或 `eval()` 执行的代码对象。
 
-#### **语法**
+**语法**
 
 ```python
 compile(source, filename, mode, flags=0, dont_inherit=False, optimize=-1)
 ```
 
-#### **参数**
+**参数**
 
 - **source**：要编译的源代码，可以是字符串或 AST（抽象语法树）对象。
-
 - **filename**：表示代码的文件名（通常为字符串），用于错误消息的显示。可以是任意字符串。
+- **mode**：指定编译模式
+  - `'exec'` ：用于编译多条语句（如模块或函数）。
+  - `'eval'` ：用于编译单个表达式。
+  - `'single'` ：用于编译单个交互式语句。
 
-- **mode**
-
-  ：指定编译模式，可以是以下三种之一：
-
-  - `'exec'`：用于编译多条语句（如模块或函数）。
-  - `'eval'`：用于编译单个表达式。
-  - `'single'`：用于编译单个交互式语句。
-
-#### **返回值**
+**返回值**
 
 返回一个代码对象，可以使用 `exec()` 或 `eval()` 执行
 
-#### 示例
+**示例**
 
 ```python
 # 流程语句使用exec
 code1 = 'for i in range(5): print(i)'
 compile1 = compile(code1,'','exec')
-
 exec(compile1)
 
 # 简单求值表达式用eval
@@ -113,12 +105,17 @@ exec(compile3)
 print(name)
 ```
 
-有返回值的字符串形式的代码用eval，没有返回值的字符串形式的代码用exec，一般不用compile。
+有返回值的字符串形式的代码用 eval，没有返回值的字符串形式的代码用 exec，一般不用 compile。
 
 ## 输入/输出相关
 
-- input:函数接受一个标准输入数据，返回为 string 类型。
-- print:打印输出。
+### `input()`
+
+函数接受一个标准输入数据，返回为 string 类型。
+
+### `print()`
+
+打印输出。
 
 ```python
 ''' 源码分析
@@ -133,7 +130,6 @@ def print(self, *args, sep=' ', end='\n', file=None): # known special case of pr
 '''
 
 print(11,22,33,sep='*')
-
 print(11,22,33,end='')
 print(44,55)
 
@@ -143,7 +139,7 @@ with open('log','w',encoding='utf-8') as f:
 
 ## 内存相关
 
-### hash
+### `hash()`
 
 获取一个对象（可哈希对象：int，str，bool，tuple）的哈希值。
 
@@ -156,17 +152,9 @@ print(hash(True))
 print(hash(False))
 print(hash((1,2,3)))
 
-# Output:
-12322
-3301683310855814603
--5446340200358907515
--7288871457537009866
-1
-0
-529344067295497451
 ```
 
-### id
+### `id()`
 
 用于获取对象的内存地址
 
@@ -174,22 +162,29 @@ print(hash((1,2,3)))
 print(id('abc'))
 print(id('123'))
 
-# Output:
-1912719664944
-1912719753584
 ```
 
 ## 文件操作相关
 
-- open()：用于打开一个文件，创建一个 file 对象
-- read()：通过文件对象调用，读取文件的内容
-- write()：文件文件对象调用，往文件里下入内容
+### `open()`
+
+用于打开一个文件，创建一个 file 对象
+
+### `read()`
+
+通过文件对象调用，读取文件的内容
+
+### `write()`
+
+文件文件对象调用，往文件里下入内容
 
 .......
 
 ## 帮助文档
 
-- help：函数用于查看函数或模块用途的详细说明。
+### `help()`
+
+函数用于查看函数或模块用途的详细说明。
 
 ```python
 print(help(print))
@@ -208,7 +203,9 @@ print(...)
 
 ## 调用相关
 
-- callable函数：用于检查一个对象是否是可调用的。如果返回True，object仍然可能调用失败；但如果返回-False，调用对象ojbect绝对不会成功。
+### `callable()`
+
+用于检查一个对象是否是可调用的。如果返回 True，object 仍然可能调用失败；但如果返回 False，调用对象 ojbect 绝对不会成功。
 
 ```python
 print(callable(0))
@@ -230,17 +227,12 @@ print(callable(Demo2))
 a = Demo2()
 print(callable(a))
 
-# Output:
-False
-False
-True
-True
-False
 ```
 
 ## 查看内置属性
 
-- dir：函数不带参数时，返回当前范围内的变量、方法和定义的类型列表；带参数时，返回参数的属性、方法列表。如果参数包含方法`__dir__()`，该方法将被调用。如果参数不包含`__dir__()`，该方法将最大限度地收集参数信息。
+### `dir()`
+函数不带参数时，返回当前范围内的变量、方法和定义的类型列表；带参数时，返回参数的属性、方法列表。如果参数包含方法 `__dir__()` ，该方法将被调用。如果参数不包含 `__dir__()` ，该方法将最大限度地收集参数信息。
 
 ```python
 import time
@@ -251,72 +243,81 @@ print(dir([]))          # 查看列表的属性和方法
 
 ## 迭代器生成器相关
 
-- range：函数可创建一个整数对象，一般用在 for 循环中。
-- next：内部实际使用了`__next__`方法，返回迭代器的下一个项目。
+### `range()`
+
+函数可创建一个整数对象，一般用在 for 循环中。
+
+### `next()`
+
+内部实际使用了 `__next__` 方法，返回迭代器的下一个项目。
+
+### `iter()`
+
+函数用来生成迭代器（通过一个可迭代对象生成迭代器）。
 
 ```python
+from collections import Iterator
+
 # 首先获得Iterator对象:
-it = iter([1,2,3,4,5,6])
+l = [1,2,3,4]
+l1 = iter(l)
+
+print(isinstance(l1,Iterable))
+print(isinstance(l1,Iterator))
+
 # 循环
 while True:
     try:
         # 获得下一个值
-        x = next(it)
+        x = next(l1)
         print(x)
     except StopIteration: # 遇到StopIteration就退出循环
         break
 ```
 
-- iter：函数用来生成迭代器（通过一个可迭代对象生成迭代器）。
+## 数据类型相关
 
-```python
-from collections import Iterable
-from collections import Iterator
+### `bool()`
 
-l = [1,2,3,4]   # 可迭代对象，但不是迭代器
-print(isinstance(l,Iterable))
-print(isinstance(l,Iterator))
+将给定参数转换为布尔类型，如果没有参数，返回 False
 
-l1 = iter(l)    # 从一个可迭代对象生成迭代器
-print(isinstance(l1,Iterable))
-print(isinstance(l1,Iterator))
-```
+### `int()`
 
-## 基础数据类型相关
+将一个字符串或数字转换为整型
 
-### 数字相关
+### `float()`
 
-**数据类型**（4个）：
+将整数和字符串转换成浮点数。
 
-- bool ：用于将给定参数转换为布尔类型，如果没有参数，返回 False。
-- int：函数用于将一个字符串或数字转换为整型。
+### `complex()`
+
+将创建复数（complex numbers）。复数是由实部和虚部组成的，通常写作 `a + bj` 的形式，其中 `a` 是实部，`b` 是虚部，`j` 是虚数单位。
 
 ```python
 print(int())
 print(int('12'))
 print(int(3.6))
 print(int('0100',base=2))  # 将2进制的 0100 转化成十进制。结果为 4
-
-# Output:
-0
-12
-3
-4
-```
-
-- float：函数用于将整数和字符串转换成浮点数。
-- complex：用于创建复数（complex numbers）。复数是由实部和虚部组成的，通常写作 `a + bj` 的形式，其中 `a` 是实部，`b` 是虚部，`j` 是虚数单位。
-
-```python
 z1 = complex(2, 3)  # 实部为 2，虚部为 3
 print(z1)  # 输出: (2+3j)
+
 ```
 
-**进制转换**（3个）：
+## 进制转换相关
 
-- bin：将十进制转换成二进制并返回。
-- oct：将十进制转化成八进制字符串并返回。
-- hex：将十进制转化成十六进制字符串并返回。
+### `bin()`
+
+将十进制转换成二进制并返回。
+
+### `ocb()`
+
+将十进制转化成八进制字符串并返回。
+
+### `hex()`
+
+将十进制转化成十六进制字符串并返回。
+
+**示例**
 
 ```python
 print(bin(10),type(bin(10)))
@@ -324,12 +325,25 @@ print(oct(10),type(oct(10)))
 print(hex(10),type(hex(10)))
 ```
 
-**数学运算**（7）：
+## 数学运算相关
 
-- abs：函数返回数字的绝对值。
-- divmod：计算除数与被除数的结果，返回一个包含商和余数的元组(a // b, a % b)。
-- round：保留浮点数的小数位数，默认保留整数。
-- pow：函数是计算x的y次方，如果z在存在，则再对结果进行取模，其结果等效于pow(x,y) %z）
+### `abs()`
+
+返回数字的绝对值。
+
+### `divmod()`
+
+计算除数与被除数的结果，返回一个包含商和余数的元组 `(a // b, a % b)`。
+
+### `round()`
+
+保留浮点数的小数位数，默认保留整数。
+
+### `pow()`
+
+函数是计算 x 的 y 次方，如果 z 存在，则再对结果进行取模，其结果等效于 `(pow(x,y) % z)`
+
+**示例**
 
 ```python
 print(abs(-5))  # 5
@@ -344,9 +358,20 @@ print(pow(2,3))  # 8
 print(pow(2,3,3))  # 2
 ```
 
-- sum：对可迭代对象进行求和计算（可设置初始值）。
-- min：返回可迭代对象的最小值（可加key，key为函数名，通过函数的规则，返回最小值）。
-- max：返回可迭代对象的最大值（可加key，key为函数名，通过函数的规则，返回最大值）。
+### `sum()`
+
+对可迭代对象进行求和计算（可设置初始值）。
+
+### `min()`
+
+返回可迭代对象的最小值（可加 key，key 为函数名，通过函数的规则，返回最小值）。
+
+### `max()`
+
+返回可迭代对象的最大值（可加 key，key 为函数名，通过函数的规则，返回最大值）。
+
+
+**示例**
 
 ```python
 print(sum([1,2,3]))
@@ -362,21 +387,30 @@ print(max([1,2,3]))
 ret = max([1,2,3,-10],key=abs)
 print(ret)
 
-# Output:
-6
-106
-1
-1
-3
--10
 ```
 
-### 数据结构相关
+## 数据结构相关
 
-**列表和元祖**（2个）
+### `list()`
 
-- list：将一个可迭代对象转化成列表（如果是字典，默认将key作为列表的元素）。
-- tuple：将一个可迭代对象转化成元祖（如果是字典，默认将key作为元祖的元素）。
+将一个可迭代对象转化成列表（如果是字典，默认将 key 作为列表的元素）。
+
+### `tuple()`
+
+将一个可迭代对象转化成元祖（如果是字典，默认将 key 作为元祖的元素）。
+
+### `dict()`
+
+创建一个字典。
+
+### `set()`
+
+创建一个集合。
+
+### `frozenset()`
+
+创建一个冻结的集合。
+
 
 ```python
 l = list((1,2,3))
@@ -394,28 +428,15 @@ tu = tuple({'k1':1,'k2':2})
 print(tu)
 ```
 
-**相关内置函数**（2个）
+## 字符串相关
 
-- reversed：将一个序列翻转，并返回此翻转序列的迭代器。
-- slice：构造一个切片对象，用于列表的切片。
+### `str()`
 
-```python
-ite = reversed(['a',2,4,'f',12,6])
-for i in ite:
-    print(i)
+将数据转化成字符串。
 
-l = ['a','b','c','d','e','f','g']
-sli = slice(3)
-print(l[sli])
+### `format()`
 
-sli = slice(0,7,2)		# 也可以加上步长
-print(l[sli])
-```
-
-**字符串相关**（9）
-
-- str：将数据转化成字符串。
-- format:与具体数据相关，用于计算各种小数，精算等。
+具体数据相关，用于计算各种小数，精算等。
 
 ```python
 # 字符串可以提供的参数,指定对齐方式，<是左对齐， >是右对齐，^是居中对齐
@@ -458,27 +479,49 @@ print(format(0.00003141566,'.1n'))  # 和g相同
 print(format(0.00003141566))        # 和g相同
 ```
 
-- repr:返回一个对象的string形式
+### `repr()`
+
+返回一个对象的 string 形式
 
 ```python
-name = 'aaron'
-print('Hello %r'%name)
+name = 'EaglesLab'
+print('Hello %r' % name)
 
-str1 = '{"name":"aaron"}'
+str1 = '{"name":"EaglesLab"}'
 print(repr(str1))
 print(str1)
 ```
 
-**数据集合**（3个）
+## 数据结构操作相关
 
-- dict：创建一个字典。
-- set：创建一个集合。
-- frozenset：返回一个冻结的集合，冻结后集合**不能再添加或删除任何元素**。
+### `reversed()`
 
-**相关内置函数**（8个）
+将一个序列翻转，并返回此翻转序列的迭代器。
 
-- len:返回一个对象中元素的个数。
-- sorted：对所有可迭代的对象进行排序操作。
+### `slice()`
+
+构造一个切片对象，用于列表的切片。
+
+```python
+ite = reversed(['a',2,4,'f',12,6])
+for i in ite:
+    print(i)
+
+l = ['a','b','c','d','e','f','g']
+sli = slice(3)
+print(l[sli])
+
+sli = slice(0,7,2)		# 也可以加上步长
+print(l[sli])
+```
+
+### `len()`
+
+返回一个对象中元素的个数。
+
+### `sorted()`
+
+对所有可迭代的对象进行排序操作。
 
 ```python
 numbers = [5, 2, 9, 1, 5, 6]		# 升序
@@ -495,7 +538,9 @@ sorted_words = sorted(words, key=len)
 print(sorted_words)  # 输出: ['apple', 'banana', 'cherry']
 ```
 
-- enumerate: 用于将一个可遍历的数据对象(如列表、元组或字符串)组合为一个索引序列，同时列出数据和数据下标，一般用在 for 循环当中。
+### `enumerate()`
+
+将一个可遍历的数据对象(如列表、元组或字符串)组合为一个索引序列，同时列出数据和数据下标，一般用在 for 循环当中。
 
 ```python
 print(enumerate([1,2,3]))
@@ -507,51 +552,51 @@ for i in enumerate([1,2,3],100):
     print(i)
 ```
 
-- all：可迭代对象中，全都是True才是True
-- any：可迭代对象中，有一个True 就是True
+### `all()`
+
+可迭代对象中，全都是True才是True。
+
+### `any()`
+
+可迭代对象中，有一个True 就是True
 
 ```python
 print(all([1,2,True,0]))
 print(any([1,'',0]))
 ```
 
-- zip：函数用于将可迭代的对象作为参数，将对象中对应的元素打包成一个个元组，然后返回由这些元组组成的列表。如果各个迭代器的元素个数不一致，则返回列表长度与最短的对象相同。
+### `zip()`
+
+将可迭代的对象作为参数，将对象中对应的元素打包成一个个元组，然后返回由这些元组组成的列表。如果各个迭代器的元素个数不一致，则返回列表长度与最短的对象相同。
 
 ```python
-names = ['Alice', 'Bob', 'Charlie']
-ages = [25, 30, 35]
+names = ['zhangsan', 'lisi', 'wangwu']
+ages = [25, 30, 35, 40]
 
 zipped = zip(names, ages)
-print(list(zipped))  # 输出: [('Alice', 25), ('Bob', 30), ('Charlie', 35)]
-
-# 不同长度的可迭代对象
-x = [1, 2]
-y = ['a', 'b', 'c']
-
-zipped = zip(x, y)
-print(list(zipped))  # 输出: [(1, 'a'), (2, 'b')]
+print(list(zipped)) 
 ```
 
-filter：用于过滤序列，过滤掉不符合条件的元素，返回由符合元素组成的新的迭代器
+### `filter()`
+
+过滤序列中不符合条件的元素，返回由符合元素组成的新的迭代器。
 
 ```python
 def func(x):
-    return x%2 == 0
+    return x % 2 == 0
 ret = filter(func,[1,2,3,4,5,6,7,8,9,10])
 print(ret)
 for i in ret:
     print(i)
-```
 
-使用 `filter()` 过滤出大于 5 的数字：
-
-```python
+# 过滤出大于 5 的数字
 numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9]
 filtered_numbers = filter(lambda x: x > 5, numbers)
 print(list(filtered_numbers))  # 输出: [6, 7, 8, 9]
 ```
 
-- map:用于将指定函数应用于可迭代对象中的每个元素，并返回一个迭代器。这个函数非常有用，可以简化对数据的转换和处理。
+### `map()`
+将指定函数应用于可迭代对象中的每个元素，并返回一个迭代器。这个函数非常有用，可以简化对数据的转换和处理。
 
 ```python
 def square(x):
@@ -605,7 +650,7 @@ add = lambda x, y: x + y
 print(add(2, 3))  # 输出: 5
 ```
 
-2. 配合`map()`使用
+2. 配合 `map()` 使用
 
 ```python
 list1 = [1,2,3,4,5,6,7,8]
@@ -617,7 +662,7 @@ for i in ret:
     print(i)
 ```
 
-3. 配合`filter()`使用
+3. 配合 `filter()` 使用
 
 ```python
 ret = filter(lambda x: x % 2 == 0,[1,2,3,4,5,6,7,8,9,10])
