--- a/SRE/Python/Python面向函数/认识函数.md
+++ b/SRE/Python/Python面向函数/认识函数.md
@@ -22,12 +22,12 @@ def function_name(parameters):
 
 ## 函数返回值
 
-函数可以使用 `return` 语句拥有返回值。如果没有 `return`，函数默认返回 `None`
+函数可以使用 `return` 语句拥有返回值。如果没有 `return`，函数默认返回 `None`。
 
 **return 关键字的作用**：
-- return 是一个关键字， return 后面的值叫“返回值”。
+- return 是一个关键字， return 后面的值叫“返回值”
 - 不写 return 的情况下，会默认返回一个 None
-- 一旦遇到 return，结束整个函数。
+- 一旦遇到 return，结束整个函数
 - 返回多个值会被组织成元组被返回，也可以用多个值来接收
 - 使用多个值接收(值的数量必须跟返回值数量对应)
 
@@ -92,15 +92,6 @@ print(check_number(0))    # 输出: 零
 - 实参是在函数调用时传入的实际值。实参可以是常量、变量、表达式或其他函数的返回值。
 - 实参的值被传递给形参。
 
-**示例：**
-
-```python
-def greet(name):  # name 是形参
-    print(f"Hello, {name}!")
-    
-greet("EaglesLab")  # "EaglesLab" 是实参
-```
-
 ### 位置参数
 
 位置参数是最常用的参数类型，调用时根据位置传递给函数。参数的数量和顺序必须与函数定义时一致。
@@ -112,6 +103,30 @@ greet("EaglesLab")  # "EaglesLab" 是实参
 ### 关键字参数
 
 按照形参的参数名进行精确传参，使用关键字参数的时候可以不用考虑形参的具体位置和顺序
+
+**示例：**
+
+```python
+# 形参 & 实参
+def greet01(name):
+    print(f"Hello, {name}!")
+    
+greet01("EaglesLab") 
+greet01("英格科技")
+
+# 位置参数
+def greet02(name, age):
+    print(f"Hello, {name}! Age: {age}")
+
+greet01("EaglesLab", 11)
+
+# 默认参数 & 关键字参数 & 可选参数
+def greet03(name, site="cloud.eagleslab.com", address="zj"):
+    print(f"Site: {site}, Address: {address}")
+
+greet03(address="nj", site="ncloud.eagleslab.com", name="EagelsLab")
+
+```
 
 ### 动态参数
 
@@ -160,7 +175,7 @@ display_info(1, 2, 3, name="Alice", age=30)
 ## 案例1：简单计算器实现
 
 ```python
-def calculate(operation, num1 = 10.24, num2):  # operation, num1 和 num2 是形参
+def calculate(operation, num1 = 10.24, num2):
     """简单计算器实现"""
     if operation == 'add':
         return num1 + num2
@@ -176,12 +191,12 @@ def calculate(operation, num1 = 10.24, num2):  # operation, num1 和 num2 是形
         return "错误：未知操作！"
 
 # 用户输入
-user_operation = input("请输入操作（add, subtract, multiply, divide）: ")  # 实参
-user_num1 = float(input("请输入第一个数字: "))  # 实参
-user_num2 = float(input("请输入第二个数字: "))  # 实参
+user_operation = input("请输入操作（add, subtract, multiply, divide）: ")
+user_num1 = float(input("请输入第一个数字: "))
+user_num2 = float(input("请输入第二个数字: "))
 
 # 调用函数
-result = calculate(user_operation, user_num1, user_num2)  # user_operation, user_num1 和 user_num2 是实参
+result = calculate(user_operation, user_num1, user_num2)
 print(f"结果: {result}")
 
 ```
@@ -192,7 +207,7 @@ print(f"结果: {result}")
 def add_book(book_title, *authors, **details):
     """添加书籍信息并打印"""
     print(f"书籍标题: {book_title}")
-    print("作者:", ", ".join(authors))  # 将作者元组转换为字符串
+    print("作者:", ", ".join(authors))
     for key, value in details.items():
         print(f"{key}: {value}")
     print("---")
